--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 
                 </div>
                 
-                    <div>
+                    <div class="box">
                         <form action="login.php" method="post" class="formitens">
                             <input type="text" placeholder="E-mail">
                             <input type="password" placeholder="Senha">
